--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@
             background-attachment: fixed;
             color: #333;
         }
-
         .container {
             background-color: rgba(255, 255, 255, 0.85);
             padding: 20px;
@@ -21,13 +20,16 @@
             max-width: 800px;
             margin: 25px auto;
         }
+        .off-screen-font li{
+            font-size: 120px;
+        }
 
         h2 {
             font-size: 28px;
             font-weight: bold;
             margin-bottom: 15px;
-            color: #6a1b9a;
-        }
+            color: #2f2f2f;
+        }   
 
         .pic {
             display: block;
@@ -81,14 +83,17 @@
 
         .smac {
             color: #1900ff;
+            font-size: 20px;
         }
 
         .uic {
             color: #d8344c;
+            font-size: 20px;
         }
 
         .uic:hover {
             color: #1900ff;
+           
         }
 
         .smac:hover {
@@ -118,16 +123,108 @@
             background-color: #d81b60;
         }
 
-        .nav-container {
-            background-color: #6a1b9a;
-            padding: 10px 0;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
-            border-radius: 10px;
-        }
+nav {
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between; 
+    background-color: rgba(255, 255, 255, 0.85);
+    border-radius: 10px;
+}
+.dark-mode-button {
+    background-color: #333333; 
+    color: white; 
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+    margin-right: 10px; 
+}
 
+.dark-mode-button:hover {
+    background-color: #000000; 
+}
+.ham-menu {
+    height: 50px;
+    width: 50px;
+    margin-left: auto;
+    position: relative;
+    cursor: pointer; 
+    z-index: 1100;
+}
+
+.ham-menu span {
+    height: 5px;
+    width: 100%;
+    border-radius: 25px;
+    background-color: #2f2f2f;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: 0.3s ease;
+}
+
+.ham-menu span:nth-child(1) {
+    top: 25%;
+}
+
+.ham-menu span:nth-child(2) {
+    top: 50%;
+}
+
+.ham-menu span:nth-child(3) {
+    top: 75%;
+}
+
+.ham-menu.active span:nth-child(1) {
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.ham-menu.active span:nth-child(2) {
+    opacity: 0;
+}
+
+.ham-menu.active span:nth-child(3) {
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+body.menu-active {
+    overflow: hidden;
+}
+
+.off-screen-menu {
+     position: fixed;
+    top: 0;
+    right: -100%;
+    width: 250px;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.85);
+    color: #2f2f2f;
+    transition: 0.3s ease;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column; 
+}
+
+.off-screen-menu.visible {
+    right: 0;
+}
+
+.off-screen-menu ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.off-screen-menu li {
+    margin: 1rem 0;
+    font-size: 1.2rem;
+    cursor: pointer;
+}
         a {
-            color: #6a1b9a;
+            color: #2f2f2f;
+            font-size: 20px;
             text-decoration: none;
             transition: color 0.3s ease;
         }
@@ -137,35 +234,6 @@
             transition: color 0.3s ease;
             text-decoration: none;
         }
-
-        nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-
-        nav ul li {
-            display: inline;
-            margin: 0 15px;
-        }
-
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-            font-size: 18px;
-        }
-
-        nav ul li a:hover {
-            text-decoration: underline;
-        }
-        .burger {
-            display: none;
-            font-size: 30px;
-            cursor: pointer;
-        }
-        
-
         @keyframes click-flash {
             0% {
                 background-color: #d81b60;
@@ -179,7 +247,6 @@
         .button:active {
             animation: click-flash 0.3s ease-in-out;
         }
-
         
         /* kuan CP */
         @media only screen and (max-width: 600px) {
@@ -188,21 +255,23 @@
                 font-size: 16px;
                 transition: width 0.5s ease;
             }
-            nav ul {
-                display: none;
-                transition: width 0.5s ease;
-            }
-
-            .burger {
-                display: block;
-                text-align: center;
-                transition: width 0.5s ease;
+            .off-screen-menu {
+                width: 50%; 
+                max-width: 300px;
             }
             .container {
                 padding: 10px;
                 margin: 10px auto;
                 max-width: 90%;
                 transition: width 0.5s ease;
+            }
+            .uic {
+                color: #d8344c;
+                font-size: 16px;
+            }
+            .smac {
+                color: #1900ff;
+                font-size: 16px;
             }
             
             h2 {
