--- a/style.css
+++ b/style.css
@@ -6,42 +6,12 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 20px;
     text-align: center;
-
+    background-image: url('https://rxaviery.github.io/pictures/pic-1.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
     color: #333;
 }
-/* sa wave effect*/
-section {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background-color: #859ac8;
-    overflow: hidden;
-}
-section .wave{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: url('https://rxaviery.github.io/pictures/wave.png');
-    background-size: 1000px 100px;
-}
-section .wave.wave1 {
-    animation: animate 30s linear infinite;
-}
-@keyframes animate {
-    0% {
-        background-position-x: 0;
-    }
-    100% {
-        background-position-x: 0;
-    }
-}
-
-/* end sa wave effect*/
 
 .container {
     background-color: rgba(255, 255, 255, 0.85);
