--- a/style.css
+++ b/style.css
@@ -6,12 +6,14 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 20px;
     text-align: center;
-    background-image: url('https://rxaviery.github.io/pictures/pic-1.jpg');
+    background-color: #859ac8;
+    background-color: ;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
     color: #333;
 }
+
 
 .container {
     background-color: rgba(255, 255, 255, 0.85);
