--- a/style.css
+++ b/style.css
@@ -20,10 +20,13 @@ body {
     background-color: #f9f9f9;
     display: inline-block;
 }
-#city-input {
+input.input1 {
+    width: 80%;
     padding: 10px;
     font-size: 1em;
-    margin-right: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 button {
     padding: 10px 20px;
@@ -124,12 +127,6 @@ label::after {
     
 }
 
-input {
-    width: 0;
-    height: 0;
-    visibility: hidden;
-
-}
 
 input:checked + label {
     background: linear-gradient(-180deg, #000000, #cac8c6); 
